cabal-version: 2.2
name:          marconi-core
version:       1.2.0.0
synopsis:      Indexers that can rewind the state to a previous version.
description:
  Please see the README on GitHub at <https://github.com/input-output-hk/marconi-core#README.md>

category:      Testing
homepage:
  https://github.com/input-output-hk/plutus-apps/marconi-core/README.md

bug-reports:   https://github.com/input-output-hk/plutus-apps/issues
author:        Radu Ometita
maintainer:    radu.ometita@iohk.io
license:       Apache-2.0
license-files:
  LICENSE
  NOTICE

build-type:    Simple

source-repository head
  type:     git
  location: https://github.com/input-output-hk/plutus-apps

common lang
  default-language:   Haskell2010
  default-extensions:
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    InstanceSigs
    MultiParamTypeClasses
    NamedFieldPuns
    OverloadedStrings
    PatternSynonyms
    ScopedTypeVariables
    StandaloneDeriving
    Strict
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies

  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wunused-packages
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities -Wmissing-import-lists

library
  import:          lang
  exposed-modules:
    Marconi.Core.Index.VSplit
    Marconi.Core.Index.VSqlite
    Marconi.Core.Storable

  hs-source-dirs:  src
  build-depends:
    , base           >=4.7 && <5
    , lens
    , primitive
    , sqlite-simple
    , vector

test-suite marconi-core-test
  import:         lang
  type:           exitcode-stdio-1.0
  main-is:        Spec.hs
  other-modules:
    Marconi.Core.Model
    Marconi.Core.Spec.Sqlite
    Marconi.Core.Spec.VSplit
    Marconi.Core.Spec.VSqlite

  hs-source-dirs: test
  build-depends:
    , base              >=4.7    && <5
    , data-default
    , lens
    , marconi-core
    , primitive
    , QuickCheck
    , safe
    , sqlite-simple     >=0.4.18
    , tasty
    , tasty-quickcheck
    , transformers
    , vector
