cabal-version: 3.0
name:          marconi-mamba
version:       0.1.0.0
license:       Apache-2.0
license-files:
  LICENSE
  NOTICE

author:        Markus Läll
maintainer:    markus.lall@iohk.io
homepage:      https://github.com/input-output-hk/plutus-apps#readme
bug-reports:   https://github.com/input-output-hk/plutus-apps/issues
description:
  Please see the README on GitHub at <https://github.com/input-output-hk/plutus-apps#readme>

build-type:    Simple

source-repository head
  type:     git
  location: https://github.com/input-output-hk/plutus-apps

common lang
  default-language:   Haskell2010
  default-extensions:
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    ExplicitForAll
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    ScopedTypeVariables
    StandaloneDeriving

  ghc-options:
    -Wall -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wmissing-import-lists
    -Wnoncanonical-monad-instances -Wredundant-constraints
    -Wunused-packages

library
  import:          lang
  hs-source-dirs:  src
  exposed-modules:
    Marconi.Api.HttpServer
    Marconi.Api.Routes
    Marconi.Api.Types
    Marconi.Api.UtxoIndexersQuery
    Marconi.Bootstrap

  --------------------------
  -- Other IOG dependencies
  --------------------------
  build-depends:
    , cardano-api
    , cardano-streaming

  --------------------
  -- Local components
  --------------------
  build-depends:
    , json-rpc
    , marconi
    , plutus-ledger

  ------------------------
  -- Non-IOG dependencies
  ------------------------
  build-depends:
    , aeson
    , base            >=4.9 && <5
    , containers
    , lens
    , servant
    , servant-server
    , sqlite-simple
    , text
    , time
    , warp

library json-rpc
  import:          lang
  hs-source-dirs:  json-rpc/src
  exposed-modules:
    Marconi.Client.Types
    Marconi.JsonRpc.Types
    Marconi.Server.Types

  build-depends:
    , aeson
    , base                 >=4.9 && <5
    , containers
    , http-media
    , servant
    , servant-client-core
    , servant-server
    , text

executable marconi-mamba
  import:         lang
  hs-source-dirs: app
  main-is:        Main.hs

  --------------------------
  -- Other IOG dependencies
  --------------------------
  build-depends:  cardano-api

  --------------------
  -- Local components
  --------------------
  build-depends:  marconi-mamba

  ------------------------
  -- Non-IOG dependencies
  ------------------------
  build-depends:
    , async
    , base                  >=4.9 && <5
    , optparse-applicative

executable examples-json-rpc-server
  import:         lang
  hs-source-dirs: examples/json-rpc-server/src
  main-is:        Main.hs

  --------------------
  -- Local components
  --------------------
  build-depends:  marconi-mamba
  build-depends:  base >=4.9 && <5

executable examples-json-rpc-client
  import:         lang
  hs-source-dirs: examples/json-rpc-client/src
  main-is:        Main.hs

  --------------------
  -- Local components
  --------------------
  build-depends:
    , json-rpc
    , plutus-ledger

  ------------------------
  -- Non-IOG dependencies
  ------------------------
  build-depends:
    , base            >=4.9 && <5
    , http-client
    , servant
    , servant-client
