cabal-version: 3.0
name:          marconi-sidechain
version:       1.2.0.0
license:       Apache-2.0
license-files:
  LICENSE
  NOTICE

author:        Markus Läll
maintainer:    markus.lall@iohk.io
homepage:      https://github.com/input-output-hk/plutus-apps#readme
bug-reports:   https://github.com/input-output-hk/plutus-apps/issues
description:
  Please see the README on GitHub at <https://github.com/input-output-hk/plutus-apps#readme>

build-type:    Simple

source-repository head
  type:     git
  location: https://github.com/input-output-hk/plutus-apps

common lang
  default-language:   Haskell2010
  default-extensions:
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    ExplicitForAll
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    OverloadedStrings
    ScopedTypeVariables
    StandaloneDeriving

  ghc-options:
    -Wall -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wmissing-import-lists
    -Wnoncanonical-monad-instances -Wredundant-constraints
    -Wunused-packages

library
  import:          lang
  hs-source-dirs:  src
  exposed-modules:
    Marconi.Sidechain.Api.HttpServer
    Marconi.Sidechain.Api.Query.Indexers.Utxo
    Marconi.Sidechain.Api.Routes
    Marconi.Sidechain.Api.Types
    Marconi.Sidechain.Bootstrap
    Marconi.Sidechain.CLI

  --------------------
  -- Local components
  --------------------
  build-depends:
    , cardano-streaming                                    >=1.2.0
    , marconi-chain-index:{marconi-chain-index, json-rpc}  >=1.2.0
    , marconi-core                                         >=1.2.0

  --------------------------
  -- Other IOG dependencies
  --------------------------
  build-depends:
    , cardano-api
    , iohk-monitoring

  ------------------------
  -- Non-IOG dependencies
  ------------------------
  build-depends:
    , aeson
    , base                  >=4.9 && <5
    , filepath
    , lens
    , optparse-applicative
    , prettyprinter
    , servant
    , servant-server
    , stm                   >=2.5
    , text
    , time
    , warp

executable marconi-sidechain
  import:         lang
  hs-source-dirs: app
  main-is:        Main.hs

  --------------------
  -- Local components
  --------------------
  build-depends:  marconi-sidechain

  ------------------------
  -- Non-IOG dependencies
  ------------------------
  build-depends:
    , async
    , base   >=4.9 && <5

executable examples-json-rpc-server
  import:         lang
  hs-source-dirs: examples/json-rpc-server/src
  main-is:        Main.hs

  --------------------
  -- Local components
  --------------------
  build-depends:
    , marconi-chain-index  >=1.2.0
    , marconi-sidechain    >=1.2.0

  ------------------------
  -- Non-IOG dependencies
  ------------------------
  build-depends:
    , async
    , base                  >=4.9 && <5
    , filepath
    , lens
    , optparse-applicative
    , stm

executable examples-json-rpc-client
  import:         lang
  hs-source-dirs: examples/json-rpc-client/src
  main-is:        Main.hs

  --------------------
  -- Local components
  --------------------
  build-depends:
    , marconi-chain-index:json-rpc  >=1.2.0
    , marconi-sidechain             >=1.2.0

  ------------------------
  -- Non-IOG dependencies
  ------------------------
  build-depends:
    , base                 >=4.9 && <5
    , http-client
    , servant
    , servant-client
    , servant-client-core

library db-utils
  import:          lang
  hs-source-dirs:  db-utils/src
  exposed-modules: Marconi.DB.SqlUtils

  --------------------------
  -- Other IOG dependencies
  --------------------------
  build-depends:   cardano-api

  ------------------------
  -- Non-IOG dependencies
  ------------------------
  build-depends:
    , async
    , base            >=4.9 && <5
    , raw-strings-qq
    , sqlite-simple
    , text
    , time

executable db-utils-exe
  import:         lang
  hs-source-dirs: db-utils/exe
  main-is:        Main.hs

  --------------------
  -- Local components
  --------------------
  build-depends:  db-utils

  ------------------------
  -- Non-IOG dependencies
  ------------------------
  build-depends:
    , base                  >=4.9 && <5
    , optparse-applicative

test-suite marconi-sidechain-test
  import:         lang
  ghc-options:    -Wno-unused-packages
  type:           exitcode-stdio-1.0
  main-is:        Spec.hs
  hs-source-dirs: test
  other-modules:
    Spec.Marconi.Sidechain.Api.Query.Indexers.Utxo
    Spec.Marconi.Sidechain.CLI

  --------------------
  -- Local components
  --------------------
  build-depends:
    , marconi-chain-index:{marconi-chain-index, json-rpc, marconi-chain-index-test-lib}  >=1.2.0
    , marconi-core                                                                       >=1.2.0
    , marconi-sidechain                                                                  >=1.2.0

  --------------------------
  -- Other IOG dependencies
  --------------------------
  build-depends:  cardano-api:{cardano-api, gen}

  ------------------------
  -- Non-IOG dependencies
  ------------------------
  build-depends:
    , aeson
    , aeson-pretty
    , base                  >=4.9 && <5
    , bytestring
    , containers
    , hedgehog
    , http-client
    , lens
    , optparse-applicative
    , servant
    , servant-client
    , servant-server
    , stm
    , tasty
    , tasty-golden
    , tasty-hedgehog
    , text
    , warp
